RESOLVED FIXED 28371
[WML] <option> element & 'onpick' events - history navigation is broken
https://bugs.webkit.org/show_bug.cgi?id=28371
Summary [WML] <option> element & 'onpick' events - history navigation is broken
Nikolas Zimmermann
Reported 2009-08-16 17:15:33 PDT
An <option> element contains an onpick event, that navigates to another card. Click any item to trigger navigation. Then go back in history. The onpick event is re-fired, so ultimately you can't reenter a card containing option elements, after you selected one initially.
Attachments
Initial patch (9.54 KB, patch)
2009-08-16 17:29 PDT, Nikolas Zimmermann
staikos: review+
eric: commit-queue-
Nikolas Zimmermann
Comment 1 2009-08-16 17:29:50 PDT
Created attachment 34942 [details] Initial patch
Eric Seidel (no email)
Comment 2 2009-08-16 18:00:49 PDT
Comment on attachment 34942 [details] Initial patch Rejecting patch 34942 from commit-queue. This patch will require manual commit. Patch https://bugs.webkit.org/attachment.cgi?id=34942 from bug 28371 failed to download and apply.
Nikolas Zimmermann
Comment 3 2009-08-16 18:49:54 PDT
Oh, it has been landed in r47347. bugzilla-tool crashed, and didn't close the bug.
Eric Seidel (no email)
Comment 4 2009-08-17 11:05:16 PDT
Sorry. There was an error in the commit-queue over the weekend. :(
Note You need to log in before you can comment on or make changes to this bug.