2009-08-16  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

Reviewed by George Staikos.

        [WML] <option> element & 'onpick' events - history navigation is broken
        https://bugs.webkit.org/show_bug.cgi?id=28371

        After selecting an option element with an 'onpick' event associated with a 'go' task,
        the navigation is executed. When going back in history, the same 'onpick' event is fired
        again. Fix that problem, add wml/option-element-onpick-recursion.html covering the bug.

        Test: wml/option-element-onpick-recursion.html

        * wml/WMLOptionElement.cpp:
        (WebCore::WMLOptionElement::handleIntrinsicEventIfNeeded):
        * wml/WMLSelectElement.cpp:
        (WebCore::WMLSelectElement::WMLSelectElement):
        (WebCore::WMLSelectElement::selectInitialOptions):
        * wml/WMLSelectElement.h:
        (WebCore::WMLSelectElement::initialized):

2009-08-16  Nikolas Zimmermann  <nikolas.zimmermann@torchmobile.com>

        Reviewed by George Staikos.

        [WML] <option> element & 'onpick' events - history navigation is broken
        https://bugs.webkit.org/show_bug.cgi?id=28371

        Add new test covering history navigation & 'onpick' event handling.

        * wml/option-element-onpick-recursion-expected.txt: Added.
        * wml/option-element-onpick-recursion.html: Added.
        * wml/resources/WMLTestCase.js:
        (createStaticWMLTestCase):
        (createDynamicWMLTestCase):
        * wml/resources/option-element-onpick-recursion.js: Added.
        (setupTestDocument):
        (prepareTest):
        (executeTest):
        * wml/resources/option-element-onpick-recursion.wml: Added.
        * wml/resources/option-element-onpick.js:
        (prepareTest):



Canonical link: https://commits.webkit.org/38948@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47347 268f45cc-cd09-0410-ab3c-d52691b4dbfc